local-services/influx/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: influx
subsets:
- addresses:
  - ip: 192.168.1.22
  ports:
  - port: 8086
    protocol: TCP
