local-services/influx/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: influx
spec:
  ports:
  - port: 8086
    protocol: TCP
    targetPort: 8086
  type: ClusterIP
